# place_verity

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/core/: clients.py  config.py
app/models/: schemas.py
app/services/: verification.py
app/storage/: db.py
